; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/ppc/extr_videodsp.c_prefetch_ppc.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/ppc/extr_videodsp.c_prefetch_ppc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32)* @prefetch_ppc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @prefetch_ppc(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32*, i32** %4, align 8
  store i32* %8, i32** %7, align 8
  br label %9

9:                                                ; preds = %15, %3
  %10 = load i32*, i32** %7, align 8
  call void asm sideeffect "dcbt 0,$0", "r,~{dirflag},~{fpsr},~{flags}"(i32* %10) #1, !srcloc !2
  %11 = load i32, i32* %5, align 4
  %12 = load i32*, i32** %7, align 8
  %13 = sext i32 %11 to i64
  %14 = getelementptr inbounds i32, i32* %12, i64 %13
  store i32* %14, i32** %7, align 8
  br label %15

15:                                               ; preds = %9
  %16 = load i32, i32* %6, align 4
  %17 = add nsw i32 %16, -1
  store i32 %17, i32* %6, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %9, label %19

19:                                               ; preds = %15
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{i32 348}
